--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   "dependencies": {
     "@auth0/auth0-react": "^1.1.0",
     "@opentripplanner/base-map": "^2.0.0",
-    "@opentripplanner/core-utils": "./custom-packages/otp-ui/core-utils",
+    "@opentripplanner/core-utils": "./custom-packages/otp-ui/core-utils#^4.8.1",
     "@opentripplanner/endpoints-overlay": "^1.3.0",
     "@opentripplanner/from-to-location-picker": "^1.3.0",
     "@opentripplanner/geocoder": "^1.2.1",
@@ -50,7 +50,7 @@
     "@opentripplanner/transit-vehicle-overlay": "^2.3.1",
     "@opentripplanner/transitive-overlay": "^1.1.3",
     "@opentripplanner/trip-details": "^2.0.0",
-    "@opentripplanner/trip-form": "./custom-packages/otp-ui/trip-form",
+    "@opentripplanner/trip-form": "./custom-packages/otp-ui/trip-form#^1.10.2",
     "@opentripplanner/trip-viewer-overlay": "^1.1.1",
     "@opentripplanner/vehicle-rental-overlay": "^1.2.1",
     "blob-stream": "^0.1.3",
